[metadata]
name = medsam2-hf
version = 0.1.0
author = Gustavo Arango
description = Hugging Face-style tokenizer and segmentation wrapper for MedSAM2.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/gaarangoa/medsam2-hf
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    torch
    numpy
    pandas
    SimpleITK
    scikit-image
    huggingface-hub
    pillow
include_package_data = True

[options.package_data]
medsam2_hf = *.json

[options.extras_require]
dev =
    black
    isort
